@@ -52,11 +52,10 @@ angular.module('tables', ['stats', 'sql', 'common', 'tableinfo'])
       };
     };
   })
-  .controller('TableDetailController', function ($scope, $location, $log, $timeout, $routeParams,
+  .controller('TableDetailController', function ($scope, $location, $log, $timeout, $route,
         SQLQuery, queryResultToObjects, roundWithUnitFilter, bytesFilter, TableList, TableInfo, TabNavigationInfo, PartitionsTableController) {
+
     var _tables = [];
-    var tableName = $routeParams.table_name;
-    var schemaName = $routeParams.schema_name;
     var refreshInterval = 5000;
     var timeout = null;
     var colorMapPanel = {
@@ -90,160 +89,191 @@ angular.module('tables', ['stats', 'sql', 'common', 'tableinfo'])
       'size': 0
     };
 
-    $scope.ptCtlr = new PartitionsTableController();
-    $scope.nothingSelected = false;
-    $scope.renderSiderbar = true;
-
-    $scope.$watch(function(){ return TableList.data; }, function(data){
-      var tables = data.tables;
-      if (tables.length > 0) {
-        var current = tables.filter(function(item, idx){
-          return item.name === tableName && item.schema_name === schemaName;
-        });
-        current = current.length ? current[0] : tables[0];
-        $scope.table = current;
-        $scope.nothingSelected = current === null;
-        $scope.renderSidebar = true;
-      } else {
-        $scope.table = placeholder;
-        $scope.nothingSelected = false;
-        $scope.renderSidebar = false;
-        $scope.renderSchema = false;
-        $scope.renderPartitions = false;
+    // http://stackoverflow.com/a/14329570/1143231
+    // http://stackoverflow.com/a/12429133/1143231
+    var lastRoute = $route.current;
+    $scope.$on('$locationChangeSuccess', function(event) {
+      if ($route.current.$$route.controller === 'TableDetailController') {
+        var params = $route.current.params;
+        render(params.schema_name, params.table_name);
+        $route.current = lastRoute;
+        // apply new params to old route
+        $route.current.params = params;
       }
-      fetch();
-    }, true);
-
-    var fetch = function fetch(){
-      $timeout.cancel(timeout);
-      if (!tableName || !schemaName || !$scope.table.partitioned) return;
-      // Table Partitions
-      var stmt = 'select partition_ident, sum(num_docs), "primary", avg(num_docs), count(*), state, sum(size) ' +
-            'from sys.shards ' +
-            'where schema_name = $1 and table_name = $2 and partition_ident != \'\' ' +
-            'group by partition_ident, "primary", state';
-      SQLQuery.execute(stmt, [schemaName, tableName]).success(function(query){
-        var result = queryResultToObjects(query,
-                                          ['partition_ident','sum_docs','primary','avg_docs','count','state','size']);
-        var idents = result.reduce(function(memo, obj, idx){
-          var ident = obj.partition_ident;
-          if (memo.indexOf(ident) === -1) memo.push(ident);
-          return memo;
-        }, []);
-
-        var partitions = [];
-        for (var i=0; i<idents.length; i++) {
-          var ident = idents[i];
-          var shardInfoForPartition = result.filter(function(item, idx){
-            return item.partition_ident === ident;
-          });
-          var info = new TableInfo(shardInfoForPartition, $scope.table.shards_configured);
-          var o = info.asObject();
-          o.partition_ident = ident;
-          o.replicas_configured = $scope.table.replicas_configured;
-          o.health_label_class = colorMapLabel[o.health];
-          partitions.push(o);
-        }
-
-        update(true, partitions);
-      }).error(function(query){
-        update(false, []);
-      });
-
-    };
-
-    var update = function update(success, partitions){
-      $scope.ptCtlr.data = partitions;
-      $scope.renderPartitions = success;
-      $scope.renderSchema = success;
-      timeout = $timeout(fetch, refreshInterval);
-    };
-
-    if (tableName && schemaName) {
-      // Table Schema
-      var tableStmt = "select column_name, data_type from information_schema.columns " +
-            "where schema_name = $1 and table_name = $2";
-      SQLQuery.execute(tableStmt, [schemaName, tableName]).success(function(query){
-        $scope.schemaHeaders = query.cols;
-        $scope.schemaRows = query.rows;
-        $scope.renderSchema = true;
-      }).error(function(query){
-        $scope.renderSchema = false;
-      });
-    }
-
-    $scope.$on('$destroy', function(){
-      $timeout.cancel(timeout);
     });
 
-    // Initial
-    $scope.table = null;
-    $scope.renderSidebar = true;
-    $scope.renderSchema = false;
-    $scope.renderPartitions = false;
+    var render = function render(schemaName, tableName){
+
+      $scope.ptCtlr = new PartitionsTableController();
+      $scope.nothingSelected = false;
+      $scope.renderSiderbar = true;
+
+      $scope.$watch(function(){ return TableList.data; }, function(data){
+        var tables = data.tables;
+        if (tables.length > 0) {
+          var current = tables.filter(function(item, idx){
+            return item.name === tableName && item.schema_name === schemaName;
+          });
+          current = current.length ? current[0] : tables[0];
+          $scope.table = current;
+          $scope.nothingSelected = current === null;
+          $scope.renderSidebar = true;
+        } else {
+          $scope.table = placeholder;
+          $scope.nothingSelected = false;
+          $scope.renderSidebar = false;
+          $scope.renderSchema = false;
+          $scope.renderPartitions = false;
+        }
+        fetch();
+      }, true);
+
+      var fetch = function fetch(){
+        $timeout.cancel(timeout);
+        if (!tableName || !schemaName || !$scope.table.partitioned) return;
+        // Table Partitions
+        var stmt = 'select partition_ident, sum(num_docs), "primary", avg(num_docs), count(*), state, sum(size) ' +
+              'from sys.shards ' +
+              'where schema_name = $1 and table_name = $2 and partition_ident != \'\' ' +
+              'group by partition_ident, "primary", state';
+        SQLQuery.execute(stmt, [schemaName, tableName]).success(function(query){
+          var result = queryResultToObjects(query,
+                                            ['partition_ident','sum_docs','primary','avg_docs','count','state','size']);
+          var idents = result.reduce(function(memo, obj, idx){
+            var ident = obj.partition_ident;
+            if (memo.indexOf(ident) === -1) memo.push(ident);
+            return memo;
+          }, []);
+
+          var partitions = [];
+          for (var i=0; i<idents.length; i++) {
+            var ident = idents[i];
+            var shardInfoForPartition = result.filter(function(item, idx){
+              return item.partition_ident === ident;
+            });
+            var info = new TableInfo(shardInfoForPartition, $scope.table.shards_configured);
+            var o = info.asObject();
+            o.partition_ident = ident;
+            o.replicas_configured = $scope.table.replicas_configured;
+            o.health_label_class = colorMapLabel[o.health];
+            partitions.push(o);
+          }
+
+          update(true, partitions);
+        }).error(function(query){
+          update(false, []);
+        });
+
+      };
+
+      var update = function update(success, partitions){
+        $scope.ptCtlr.data = partitions;
+        $scope.renderPartitions = success;
+        $scope.renderSchema = success;
+        timeout = $timeout(fetch, refreshInterval);
+      };
+
+      if (tableName && schemaName) {
+        // Table Schema
+        var tableStmt = "select column_name, data_type from information_schema.columns " +
+              "where schema_name = $1 and table_name = $2";
+        SQLQuery.execute(tableStmt, [schemaName, tableName]).success(function(query){
+          $scope.schemaHeaders = query.cols;
+          $scope.schemaRows = query.rows;
+          $scope.renderSchema = true;
+        }).error(function(query){
+          $scope.renderSchema = false;
+        });
+      }
+
+      $scope.$on('$destroy', function(){
+        $timeout.cancel(timeout);
+      });
+
+      // Initial
+      $scope.table = null;
+      $scope.renderSidebar = true;
+      $scope.renderSchema = false;
+      $scope.renderPartitions = false;
+
+    };
+
+    render($route.current.params.schema_name, $route.current.params.table_name);
 
   })
-  .controller('TableListController', function ($scope, $routeParams,
+  .controller('TableListController', function ($scope, $route,
         TableList, TabNavigationInfo) {
 
-    var tableName = $routeParams.table_name;
-    var schemaName = $routeParams.schema_name;
-
-    $scope.renderSidebar = true;
-    $scope.$watch(function(){ return TableList.data; }, function(data){
-      var tables = data.tables;
-      var hasTables = tables.length > 0;
-      $scope.renderSidebar = hasTables;
-      if (hasTables) {
-        // use name and schema from first item
-        if (!tableName || !schemaName) {
-          tableName = tables[0].name;
-          schemaName = tables[0].schema_name;
-        }
-        // group tables
-        $scope.tables = [
-          {
-            "display_name": "Tables",
-            "tables": tables.filter(function(item, idx){ return item.schema_name == 'doc'; }),
-            "schema_name": "doc"
-          },
-          {
-            "display_name": "Blob Tables",
-            "tables": tables.filter(function(item, idx){ return item.schema_name == 'blob'; }),
-            "schema_name": "blob"
-          }
-        ];
-      } else {
-        $scope.tables = [];
+    // http://stackoverflow.com/a/14329570/1143231
+    // http://stackoverflow.com/a/12429133/1143231
+    $scope.$on('$locationChangeSuccess', function(event) {
+      if ($route.current.$$route.controller === 'TableDetailController') {
+        var params = $route.current.params;
+        render(params.schema_name, params.table_name);
       }
-    }, true);
+    });
 
-    $scope.isActive = function (schema_name, table_name) {
-      return table_name === tableName && schema_name === schemaName;
+    var render = function render(schemaName, tableName){
+
+      $scope.renderSidebar = true;
+      $scope.$watch(function(){ return TableList.data; }, function(data){
+        var tables = data.tables;
+        var hasTables = tables.length > 0;
+        $scope.renderSidebar = hasTables;
+        if (hasTables) {
+          // use name and schema from first item
+          if (!tableName || !schemaName) {
+            tableName = tables[0].name;
+            schemaName = tables[0].schema_name;
+          }
+          // group tables
+          $scope.tables = [
+            {
+              "display_name": "Tables",
+              "tables": tables.filter(function(item, idx){ return item.schema_name == 'doc'; }),
+              "schema_name": "doc"
+            },
+            {
+              "display_name": "Blob Tables",
+              "tables": tables.filter(function(item, idx){ return item.schema_name == 'blob'; }),
+              "schema_name": "blob"
+            }
+          ];
+        } else {
+          $scope.tables = [];
+        }
+      }, true);
+
+      $scope.isActive = function (schema_name, table_name) {
+        return table_name === tableName && schema_name === schemaName;
+      };
+
+      $scope.startedShardsError = function(table) {
+        if (table.partitioned && table.shards_started === 0) return false;
+        return (table.shards_started < table.shards_configured);
+      };
+
+      // bind tooltips
+      $("[rel=tooltip]").tooltip({ placement: 'top'});
+
+      // sidebar button handler (mobile view)
+      $scope.toggleSidebar = function() {
+        $("#wrapper").toggleClass("active");
+      };
+
+      $scope.toggleElements = function(index) {
+        $("#nav-tabs-"+index).collapse("toggle");
+        $("#nav-tabs-header-"+index+" i.fa").toggleClass("fa-caret-down").toggleClass("fa-caret-right");
+        TabNavigationInfo.toggleIndex(index);
+      };
+
+      $scope.isCollapsed = function(index) {
+        return TabNavigationInfo.collapsed[index];
+      };
+
     };
 
-    $scope.startedShardsError = function(table) {
-      if (table.partitioned && table.shards_started === 0) return false;
-      return (table.shards_started < table.shards_configured);
-    };
-
-    // bind tooltips
-    $("[rel=tooltip]").tooltip({ placement: 'top'});
-
-    // sidebar button handler (mobile view)
-    $scope.toggleSidebar = function() {
-      $("#wrapper").toggleClass("active");
-    };
-
-    $scope.toggleElements = function(index) {
-      $("#nav-tabs-"+index).collapse("toggle");
-      $("#nav-tabs-header-"+index+" i.fa").toggleClass("fa-caret-down").toggleClass("fa-caret-right");
-      TabNavigationInfo.toggleIndex(index);
-    };
-
-    $scope.isCollapsed = function(index) {
-      return TabNavigationInfo.collapsed[index];
-    };
+    render($route.current.params.schema_name, $route.current.params.table_name);
 
   });
 
