@@ -5,6 +5,8 @@ Changes for Crate Data Admin Interface
 Unreleased
 ==========
 
+ - fix: prevent selected node/table item from being out of viewport
+
 2014/05/15 0.7.2
 ================
 
